--- a/src/App.css
+++ b/src/App.css
@@ -86,11 +86,8 @@
   margin-bottom: 5px;
 }
 
-.Banner-container {
-  float: left;
-  width: 100%;
-  bottom: 0;
+.Banner-container{
+  bottom:0;
   color: white;
-  padding: 20px;
-  
+  font-size: 20px;
 }
